CHANGELOG Roundcube Webmail
===========================

- Fix encoding of attachment with comma in name (#1488389)
- Scroll long lists on drag&drop (#1485946)
- Fix handling of % character in IMAP protocol (#1488382)
- Fix duplicate names handling in addressbook searches (#1488375)
- Fix displaying HTML messages from Disqus (#1488372)
- Exclude E_STRICT from error_reporting for PHP 5.4
- Copy all skins in installto script (#1488376)
- Prevent from folder selection on virtual folder collapsing (#1488346)

RELEASE 0.8-beta
----------------
- Upgraded to jQuery 1.7.1 (#1488337) and jQuery UI 1.8.18
- Add Russian to the spellchecker languages list (#1488135)
- Remember custom skin selection after logout (#1488355)
- Make sure About tab is always the last tab (#1488257)
- Fix issue with folder creation under INBOX. namespace (#1488349)
- Added mailto: protocol handler registration link in User Preferences (#1486580)
- Handle identity details box with an iframe (#1487020)
- Fix issue where some text from original message was missing on reply (#1488340)
- Fix parse errors in DDL files for MS SQL Server
- User configurable setting how to display contact names in list
- Make contacts list sorting configurable for the admin/user
- Revert SORT=DISPLAY support, removed by mistake (#1488327)
- Fix autoselect_host() for login (#1488297)
- Fix drafts update issues when edited from preview pane (#1488314)
- Changed license to GNU GPLv3+ with exceptions for skins & plugins
- Make mime type detection based on filename extension to be case-insensitive
- Fix failure on MySQL database upgrade from 0.7 - text column can't have default value (#1488300)
- Added address book widget on compose screen
- Use proper timezones from PHP's internal timezonedb (#1485592)
- Add separate pagesize setting for mail messages and contacts (#1488269)
- Deprecate $DB, $USER, $IMAP global variables, Use $RCMAIL instead
- Add option to set default font for HTML message (#1484137)