@@ -38,6 +38,17 @@
   opacity: 0.35;
 }
 
+#messagetoolbar a.button.selected {
+  background-color: #ddd;
+  margin-left: 4px;
+  margin-right: 4px;
+  margin-top: -1px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+}
+
 #messagetoolbar a.checkmailSel {
   background-position: 0 -32px;
 }
